tests for methods of BookingServiceImplTest class implemented